--- a/Frontend/vercel.json
+++ b/Frontend/vercel.json
@@ -1,19 +1,8 @@
 {
-    "version": 2,
-    "builds": [
+    "rewrites": [
         {
-            "src": "index.js",
-            "use": "@vercel/node"
+            "source": "/(.*)",
+            "destination": "/"
         }
-    ],
-    "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "index.js"
-        }
-    ],
-    "env": {
-        "NODE_ENV": "production",
-        "Mongo": "mongodb+srv://ashishkhadka317:ashishkhadka317@cluster0.mxnmjut.mongodb.net/Note?retryWrites=true&w=majority&appName=Cluster0"
-    }
+]
 }
